[tool.poetry]
name = "nervous-analytics"
version = "0.2.0"
description = "Package implementing modular processes for real-time feature localization on ECG and EDA signals."
authors = [
    "Bertrand Massot <bertrand.massot@insa-lyon.fr>",
    "Matthieu Mesnage",
    "Tristan Habémont"
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/INL-Biomedical-Sensor/Nervous-Analytics"
packages = [
    { include = "nervous_analytics" }
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
tensorflow = "^2.16.2"
scipy = "^1.14.0"
pandas = "^2.2.2"
PyWavelets = "^1.6.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
ruff = "^0.4.2"

[tool.ruff]
line-length = 119
target-version = "py310"
lint.select = ["I", "E", "F", "C"]
fix = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
